web service creado y publicando, operación de recepción de calificaciones y correcciones

--- a/web/admin/restaurante/Create.xhtml
+++ b/web/admin/restaurante/Create.xhtml
@@ -40,6 +40,9 @@
         <ui:define name="right">
         </ui:define>
         <ui:define name="content">
+            
+            <script src="resources/js/archivos.js" ></script>
+            
             <p:panelGrid class="tblCentfull">
                 <p:row>
                     <p:column colspan="3">
