--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -13,84 +13,37 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     </h:head>
-    <h:body>
-
-        <p:panelGrid class="ui-panelgrid">
-            <p:row>
-                
-                <p:column  style="width: 100%"> </p:column>
-                <p:column>
-                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Iniciar Sesión</button>
-                </p:column>
-            </p:row>
-        </p:panelGrid>
-        <!-- Modal -->
-        <div id="myModal" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Iniciar Sesion</h4>
-                    </div>
-                    <div class="modal-body">
-                        <h:form id="formLogin">
-                            <p:messages closable="true" />
-                            <p:panelGrid class="ui-panelgrid">
-                                <p:row>
-                                    <p:column>
-                                        <p:inputText class="form-control" value="#{sessionController.nombreUsuario}" id="nombreusuario" placeholder="user name" required="true" requiredMessage="nombre de usuario no puede ser vacio" />
-                                    </p:column>
-                                    <p:column>
-                                        <p:message for="nombreusuario" display="icon"/>
-                                    </p:column>
-                                </p:row>
-
-                                <p:row>
-                                    <p:column>
-                                        <p:password class="form-control" value="#{sessionController.contrasena}" id="password" placeholder="password" required="true" requiredMessage="password no puede ser vacio" /> 
-
-                                    </p:column>
-                                    <p:column>
-                                        <p:message for="password" display="icon"/>
-                                    </p:column>
-                                </p:row>
-                                <p:row>
-                                    <p:column>
-                                        <h:commandButton class="btn btn-primary" action="#{sessionController.login()}" value="Iniciar session" />
-
-                                    </p:column>
-                                </p:row>
-                            </p:panelGrid>
-                        </h:form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-
+    <h:body style="background-image: url('resources/imagenes/texturaFondo.png')">
+        <h:form id="formLogin">
+            <div id="principalPadre">
+                <div id="principalHijo">
+            <h1>Iniciar sesión</h1>
+                <p:panelGrid class="ui-panelgrid">
+                    <p:row>
+                        <p:column>
+                            <p:inputText class="form-control" value="#{sessionController.nombreUsuario}" id="nombreusuario" placeholder="nombre de usuario" required="true" requiredMessage="el nombre de usuario no puede estar vacio" />
+                        </p:column>
+                        <p:column>
+                            <p:message for="nombreusuario" display="icon"/>
+                        </p:column>
+                    </p:row>
+                    <p:row>
+                        <p:column>
+                            <p:password class="form-control" value="#{sessionController.contrasena}" id="password" placeholder="contraseña" required="true" requiredMessage="la contraseña no puede estar vacía" /> 
+                        </p:column>
+                        <p:column>
+                            <p:message for="password" display="icon"/>
+                        </p:column>
+                    </p:row>
+                    <p:row>
+                        <p:column>
+                            <h:commandButton class="btn btn-primary" action="#{sessionController.login()}" value="Iniciar sesión" />
+                        </p:column>
+                    </p:row>
+                </p:panelGrid>
             </div>
-        </div>
-
+            </div>
+            </h:form>
     </h:body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
 
