--- a/web/admin/restaurante/Create.xhtml
+++ b/web/admin/restaurante/Create.xhtml
@@ -12,23 +12,23 @@
             <h:form>      
                 <p:panelGrid class="tblCentfull">
                     <p:row>
-                        <p:column>
-                            <a href="#" class="btn btn-info btn-lg">Nuevo Restaurante</a>
+                        <p:column class="btn-glotonDark">
+                            <a href="#" class="btn btn-glotonDark btn-lg">Nuevo Restaurante</a>
                         </p:column>
-                        <p:column>
-                            <a href="../categoria/List.xhtml" class="btn btn-default btn-lg">Gestion de Categorias</a>
+                        <p:column class="btn-glotonLight">
+                            <a href="../categoria/List.xhtml" class="btn btn-glotonLight btn-lg">Gestion de Categorias</a>
                         </p:column>
-                        <p:column>
-                            <a href="../plato/List.xhtml" class="btn btn-default btn-lg">Gestion de Platos</a>
+                        <p:column class="btn-glotonLight">
+                            <a href="../plato/List.xhtml" class="btn btn-glotonLight btn-lg">Gestion de Platos</a>
                         </p:column>
-                        <p:column>
-                            <a href="List.xhtml" class="btn btn-default btn-lg">Gestion de Restaurantes</a>
+                        <p:column class="btn-glotonLight">
+                            <a href="List.xhtml" class="btn btn-glotonLight btn-lg">Gestion de Restaurantes</a>
                         </p:column>
-                        <p:column>
-                            <a href="../usuario/List.xhtml" class="btn btn-default btn-lg">Gestion de Usuarios</a>
+                        <p:column class="btn-glotonLight">
+                            <a href="../usuario/List.xhtml" class="btn btn-glotonLight btn-lg">Gestion de Usuarios</a>
                         </p:column>
-                        <p:column class="btn btn-success">
-                            <h:commandButton class="btn btn-success btn-lg" value="Logout" action="#{sessionController.logout()}"/>
+                        <p:column class="btn-success">
+                            <h:commandButton class="btn btn-glotonLogout btn-lg" value="Logout" action="#{sessionController.logout()}"/>
                         </p:column>
                     </p:row>
                 </p:panelGrid>
