--- a/web/plantillaMaestra.xhtml
+++ b/web/plantillaMaestra.xhtml
@@ -54,7 +54,8 @@
             </div>
         </div>
         <div id="bottom">
-            <ui:insert name="bottom"> <!-- Bottom --> </ui:insert>
+            <ui:insert name="bottom"> 
+            </ui:insert>
         </div>
 
     </h:body>
