--- a/web/usuario/platoRestaurante/Edit.xhtml
+++ b/web/usuario/platoRestaurante/Edit.xhtml
@@ -13,20 +13,20 @@
             <h:form>      
                 <p:panelGrid class="tblCentfull">
                     <p:row>
-                        <p:column>
-                            <a href="#" class="btn btn-info btn-lg">Editar Platillo</a>
+                        <p:column class="btn-glotonDark">
+                            <a href="#" class="btn btn-glotonDark btn-lg">Editar Platillo</a>
                         </p:column>
-                        <p:column>
-                            <a href="List.xhtml" class="btn btn-default btn-lg">Gestion de la carta</a>
+                        <p:column class="btn-glotonLight">
+                            <a href="List.xhtml" class="btn btn-glotonLight btn-lg">Gestion de la carta</a>
                         </p:column>
-                        <p:column>
-                            <a href="../restaurante/EditarRestLogeado.xhtml.xhtml" class="btn btn-default btn-lg">Gestion del Restaurante</a>
+                        <p:column class="btn-glotonLight">
+                            <a href="../restaurante/EditarRestLogeado.xhtml.xhtml" class="btn btn-glotonLight btn-lg">Gestion del Restaurante</a>
                         </p:column>
-                        <p:column>
-                            <a href="../calificacion/List.xhtml" class="btn btn-default btn-lg">Reporte de Calificaciones</a>
+                        <p:column class="btn-glotonLight">
+                            <a href="../calificacion/List.xhtml" class="btn btn-glotonLight btn-lg">Reporte de Calificaciones</a>
                         </p:column>
-                        <p:column class="btn btn-success">
-                            <h:commandButton class="btn btn-success btn-lg" value="Logout" action="#{sessionController.logout()}"/>
+                        <p:column class="btn-glotonLogout">
+                            <h:commandButton class="btn btn-glotonLogout btn-lg" value="Logout" action="#{sessionController.logout()}"/>
                         </p:column>
                     </p:row>
                 </p:panelGrid>
