--- a/web/usuario/platoRestaurante/List.xhtml
+++ b/web/usuario/platoRestaurante/List.xhtml
@@ -13,20 +13,20 @@
             <h:form>      
                 <p:panelGrid class="tblCentfull">
                     <p:row>
-                        <p:column>
-                            <a href="Create.xhtml" class="btn btn-default btn-lg">Nuevo Platillo</a>
+                        <p:column class="btn-glotonLight">
+                            <a href="Create.xhtml" class="btn btn-glotonLight btn-lg">Nuevo Platillo</a>
                         </p:column>
-                        <p:column>
-                            <a href="#" class="btn btn-info btn-lg">Gestion de la carta</a>
+                        <p:column class="btn-glotonDark">
+                            <a href="#" class="btn btn-glotonDark btn-lg">Gestion de la carta</a>
                         </p:column>
-                        <p:column>
-                            <a href="../restaurante/EditarRestLogeado.xhtml" class="btn btn-default btn-lg">Gestion del Restaurante</a>
+                        <p:column class="btn-glotonLight">
+                            <a href="../restaurante/EditarRestLogeado.xhtml" class="btn btn-glotonLight btn-lg">Gestion del Restaurante</a>
                         </p:column>
-                        <p:column>
-                            <a href="../calificacion/List.xhtml" class="btn btn-default btn-lg">Reporte de Calificaciones</a>
+                        <p:column class="btn-glotonLight">
+                            <a href="../calificacion/List.xhtml" class="btn btn-glotonLight btn-lg">Reporte de Calificaciones</a>
                         </p:column>
-                        <p:column class="btn btn-success">
-                            <h:commandButton class="btn btn-success btn-lg" value="Logout" action="#{sessionController.logout()}"/>
+                        <p:column class="btn-glotonLogout">
+                            <h:commandButton class="btn btn-glotonLogout btn-lg" value="Logout" action="#{sessionController.logout()}"/>
                         </p:column>
                     </p:row>
                 </p:panelGrid>
@@ -91,9 +91,9 @@
                                         <f:facet name="header">
                                             <h:outputText value="Opciones"/>
                                         </f:facet>
-                                        <h:commandButton class="btn btn-info" action="#{platoRestauranteController.prepareEdit}" value="#{bundle.ListPlatoRestauranteEditLink}"/>
+                                        <h:commandButton class="btn btn-glotonLight" action="#{platoRestauranteController.prepareEdit}" value="#{bundle.ListPlatoRestauranteEditLink}"/>
                                         <h:outputText value=" "/>
-                                        <h:commandButton class="btn btn-danger" action="#{platoRestauranteController.destroy}" value="#{bundle.ListPlatoRestauranteDestroyLink}"/>
+                                        <h:commandButton class="btn btn-glotonDark" action="#{platoRestauranteController.destroy}" value="#{bundle.ListPlatoRestauranteDestroyLink}"/>
                                     </h:column>
                                 </h:dataTable>
                             </h:panelGroup>
