--- a/web/admin/categoria/List.xhtml
+++ b/web/admin/categoria/List.xhtml
@@ -47,7 +47,7 @@
                     </p:column>
                 </p:row>
                 <p:row>
-                    <p:column style="width: 100px">
+                    <p:column style="width: 7%">
                     </p:column>
                     <p:column>
                         <h:form styleClass="jsfcrud_list_form">
@@ -92,7 +92,7 @@
 
                         </h:form>
                     </p:column>
-                    <p:column style="width: 100px">
+                    <p:column style="width: 7%">
                     </p:column>
                 </p:row>
             </p:panelGrid>
