--- a/web/admin/restaurante/List.xhtml
+++ b/web/admin/restaurante/List.xhtml
@@ -40,7 +40,7 @@
         <ui:define name="right">
         </ui:define>
         <ui:define name="content" class="backGroundTexture">
-                
+
             <p:panelGrid class="tblCentfull">
                 <p:row>
                     <p:column colspan="3">
@@ -48,7 +48,7 @@
                     </p:column>
                 </p:row>
                 <p:row>
-                    <p:column style="width: 100px">
+                    <p:column style="width: 7%">
                     </p:column>
                     <p:column>
                         <h:form styleClass="jsfcrud_list_form">
@@ -123,7 +123,7 @@
                         </h:form>
 
                     </p:column>
-                    <p:column style="width: 100px">
+                    <p:column style="width: 7%">
                     </p:column>
                 </p:row>
             </p:panelGrid>
