--- a/web/admin/usuario/Edit.xhtml
+++ b/web/admin/usuario/Edit.xhtml
@@ -44,14 +44,14 @@
                     </p:column>
                 </p:row>
                 <p:row>
-                    <p:column style="width: 500px">
+                    <p:column style="width: 20%">
                     </p:column>
                     <p:column>
                         <h:panelGroup id="messagePanel" layout="block">
                             <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
                         </h:panelGroup>
                         <h:form id="formEditUsu">
-                            <h:panelGrid columns="2">
+                            <h:panelGrid columns="2"  class="tblCentfull">
                                 <h:outputLabel value="Nombre" for="dueNombre" />
                                 <h:inputText class="form-control" id="dueNombre" value="#{usuarioController.selected.dueNombre}" title="#{bundle.EditUsuarioTitle_dueNombre}" />
                                 <h:outputLabel value="Correo" for="dueEmail" />
@@ -74,10 +74,16 @@
                                 <p:calendar id="dueFechaRegistro" value="#{usuarioController.date1}" title="#{bundle.EditUsuarioTitle_dueFechaRegistro}" />
                                     
                             </h:panelGrid>
-                            <h:commandButton class="btn btn-primary" action="#{usuarioController.update}" value="#{bundle.EditUsuarioSaveLink}"/>
+                            <p:panelGrid class="tblCentfull">
+                                <p:row>
+                                    <p:column class="alDer">
+                                        <h:commandButton class="btn btn-glotonLight btn-lg" action="#{usuarioController.update}" value="#{bundle.EditUsuarioSaveLink}"/>
+                        </p:column>
+                                </p:row>
+                            </p:panelGrid>
                         </h:form>
                     </p:column>
-                    <p:column style="width: 500px">
+                    <p:column style="width: 20%">
                     </p:column>
                 </p:row>
             </p:panelGrid>
