--- a/web/admin/usuario/List.xhtml
+++ b/web/admin/usuario/List.xhtml
@@ -45,7 +45,7 @@
                     </p:column>
                 </p:row>
                 <p:row>
-                    <p:column style="width: 100px">
+                    <p:column style="width: 7%">
                     </p:column>
                     <p:column>
 
@@ -116,7 +116,7 @@
                             </h:panelGroup>
                         </h:form>
                     </p:column>
-                    <p:column style="width: 100px">
+                    <p:column style="width: 7%">
                     </p:column>
                 </p:row>
             </p:panelGrid>
