--- a/web/usuario/calificacion/List.xhtml
+++ b/web/usuario/calificacion/List.xhtml
@@ -41,7 +41,7 @@
                     </p:column>
                 </p:row>
                 <p:row>
-                    <p:column style="width: 500px">
+                    <p:column style="width: 20%">
                     </p:column>
                     <p:column>
                         <h:form styleClass="jsfcrud_list_form">
@@ -73,7 +73,7 @@
                             
                         </h:form>
                     </p:column>
-                    <p:column style="width: 500px">
+                    <p:column style="width: 20%">
                     </p:column>
                 </p:row>
             </p:panelGrid>
