--- a/web/admin/plato/List.xhtml
+++ b/web/admin/plato/List.xhtml
@@ -44,7 +44,7 @@
                     </p:column>
                 </p:row>
                 <p:row>
-                    <p:column style="width: 100px">
+                    <p:column style="width: 7%">
                     </p:column>
                     <p:column>
 
@@ -96,7 +96,7 @@
 
                         </h:form>
                     </p:column>
-                    <p:column style="width: 100px">
+                    <p:column style="width: 7%">
                     </p:column>
                 </p:row>
             </p:panelGrid>
