--- a/web/usuario/platoRestaurante/Create.xhtml
+++ b/web/usuario/platoRestaurante/Create.xhtml
@@ -41,7 +41,7 @@
                     </p:column>
                 </p:row>
                 <p:row>
-                    <p:column style="width: 300px">
+                    <p:column style="width: 20%">
                     </p:column>
                     <p:column>
                         <h:panelGroup id="messagePanel" layout="block">
@@ -63,12 +63,18 @@
                                 <h:selectOneMenu  class="form-control" id="platEstado" value="#{platoRestauranteController.selected.platEstado}" title="#{bundle.CreatePlatoRestauranteTitle_platEstado}" >
                                     <f:selectItems  value="#{platoRestauranteController.estado}"/>
                                 </h:selectOneMenu>
-                                
+
                             </h:panelGrid>
-                            <h:commandButton class="btn btn-glotonLight btn-lg alDer" action="#{platoRestauranteController.create}" value="#{bundle.CreatePlatoRestauranteSaveLink}" />
+                            <p:panelGrid class="tblCentfull">
+                                <p:row>
+                                    <p:column class="alDer">
+                                        <h:commandButton class="btn btn-glotonLight btn-lg" action="#{platoRestauranteController.create}" value="#{bundle.CreatePlatoRestauranteSaveLink}" />
+                                    </p:column>
+                                </p:row>
+                            </p:panelGrid>
                         </h:form>
                     </p:column>
-                    <p:column style="width: 300px">
+                    <p:column style="width: 20%">
                     </p:column>
                 </p:row>
             </p:panelGrid>
