--- a/web/usuario/platoRestaurante/List.xhtml
+++ b/web/usuario/platoRestaurante/List.xhtml
@@ -42,7 +42,7 @@
                     </p:column>
                 </p:row>
                 <p:row>
-                    <p:column style="width: 100px">
+                    <p:column style="width: 7%">
                     </p:column>
                     <p:column>
                         <h:form styleClass="jsfcrud_list_form">
@@ -100,7 +100,7 @@
                             </h:panelGroup>
                         </h:form>
                     </p:column>
-                    <p:column style="width: 100px">
+                    <p:column style="width: 7%">
                     </p:column>
                 </p:row>
             </p:panelGrid>
