casi todas la paginas tienen el fondo y la transparencia aplicada

--- a/web/admin/categoria/Create.xhtml
+++ b/web/admin/categoria/Create.xhtml
@@ -54,7 +54,7 @@
                 <p:outputLabel value="#{categoriaController.foto.fileName}"/>
             </h:form>
 
-            <p:panelGrid class="tblCentfull">
+            <p:panelGrid class="noBorder transparentBackground tblCentfull">
                 <p:row>
                     <p:column colspan="3">
                         <h1 class="page-header alCen">Categorias</h1>
