--- a/web/admin/categoria/Edit.xhtml
+++ b/web/admin/categoria/Edit.xhtml
@@ -40,7 +40,7 @@
         <ui:define name="right">
         </ui:define>
         <ui:define name="content">
-            <p:panelGrid class="tblCentfull">
+            <p:panelGrid class="noBorder transparentBackground tblCentfull">
                 <p:row>
                     <p:column colspan="3">
                         <h1 class="page-header alCen">Categorias</h1>
