--- a/web/admin/restaurante/Create.xhtml
+++ b/web/admin/restaurante/Create.xhtml
@@ -43,7 +43,7 @@
 
             <script src="resources/js/archivos.js" ></script>
 
-            <p:panelGrid class="tblCentfull">
+            <p:panelGrid class="noBorder transparentBackground tblCentfull">
                 <p:row>
                     <p:column colspan="3">
                         <h1 class="page-header alCen">Restaurantes</h1>
