--- a/web/admin/categoria/List.xhtml
+++ b/web/admin/categoria/List.xhtml
@@ -40,7 +40,7 @@
         <ui:define name="right">
         </ui:define>
         <ui:define name="content">
-            <p:panelGrid class="tblCentfull" style="position:relative;">
+            <p:panelGrid class="noBorder transparentBackground tblCentfull" style="position:relative;">
                 <p:row>
                     <p:column colspan="3">
                         <h1 class="page-header alCen">Categorias</h1>
