--- a/web/admin/restaurante/List.xhtml
+++ b/web/admin/restaurante/List.xhtml
@@ -41,7 +41,7 @@
         </ui:define>
         <ui:define name="content" class="backGroundTexture">
 
-            <p:panelGrid class="tblCentfull">
+            <p:panelGrid class="noBorder transparentBackground tblCentfull">
                 <p:row>
                     <p:column colspan="3">
                         <h1 class="page-header alCen">Restaurantes</h1>
