--- a/web/admin/usuario/Create.xhtml
+++ b/web/admin/usuario/Create.xhtml
@@ -37,7 +37,7 @@
         </ui:define>
 
         <ui:define name="content">
-            <p:panelGrid class="tblCentfull">
+            <p:panelGrid class="noBorder transparentBackground tblCentfull">
                 <p:row>
                     <p:column colspan="3">
                         <h1 class="page-header alCen">Usuarios</h1>
