--- a/web/plantillaMaestra.xhtml
+++ b/web/plantillaMaestra.xhtml
@@ -35,8 +35,8 @@
         <title>Glot-On</title>
     </h:head>
 
-    <h:body>
-
+    <h:body styleClass="Bimage">
+        
         <div id="top">
             <ui:insert name="top"><!-- Top --></ui:insert>
         </div>
@@ -48,7 +48,7 @@
                 <div id="right">
                     <ui:insert name="right"> <!-- Right --> </ui:insert>
                 </div>
-                <div id="content" class="right_content" >
+                <div id="content" class="right_content">
                     <ui:insert name="content"> <!-- Content --> </ui:insert>
                 </div>
             </div>
