--- a/web/usuario/platoRestaurante/Create.xhtml
+++ b/web/usuario/platoRestaurante/Create.xhtml
@@ -34,7 +34,7 @@
         </ui:define>
 
         <ui:define name="content">
-            <p:panelGrid class="tblCentfull">
+            <p:panelGrid class="noBorder transparentBackground tblCentfull">
                 <p:row>
                     <p:column colspan="3">
                         <h1 class="page-header alCen" style="color:#6E4A00;">Nuevo Platillo</h1>
