--- a/web/usuario/platoRestaurante/Edit.xhtml
+++ b/web/usuario/platoRestaurante/Edit.xhtml
@@ -35,7 +35,7 @@
         </ui:define>
 
         <ui:define name="content">
-            <p:panelGrid class="tblCentfull">
+            <p:panelGrid class="noBorder transparentBackground tblCentfull">
                 <p:row>
                     <p:column colspan="3">
                         <h1 class="page-header alCen">Editar Platillo</h1>
