--- a/web/usuario/restaurante/EditarRestLogeado.xhtml
+++ b/web/usuario/restaurante/EditarRestLogeado.xhtml
@@ -34,7 +34,7 @@
         </ui:define>
 
         <ui:define name="content">
-            <p:panelGrid class="tblCentfull">
+            <p:panelGrid class="noBorder transparentBackground tblCentfull">
                 <p:row>
                     <p:column colspan="3">
                         <h1 class="page-header alCen">Gestionar Restaurante</h1>
