--- a/web/admin/restaurante/Create.xhtml
+++ b/web/admin/restaurante/Create.xhtml
@@ -66,7 +66,7 @@
                                                            sizeLimit="1000000" invalidSizeMessage="Máximo 1 MegaByte" invalidFileMessage="Tipo de archivo no válido" fileLimit="1" allowTypes="/(\.|\/)(gif|jpe?g|png)$/"
                                                            
                                                            />
-                                <p:outputLabel value="#{categoriaController.foto.fileName}"/>
+                            <p:outputLabel value="#{restauranteController.foto.fileName}"/>
                         </h:form>
                         
                         <h:form>
